/*
 * Copyright (C) 2018 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";
option optimize_for = LITE_RUNTIME;

package perfetto.protos;

// Values from NDK's android/log.h.
enum AndroidLogcatLogId {
  DEFAULT = 0;  // MAIN.
  RADIO = 1;
  EVENTS = 2;
  SYSTEM = 3;
  CRASH = 4;
  STATS = 5;
  SECURITY = 6;
  KERNEL = 7;
}

enum AndroidLogcatPriority {
  UNSPECIFIED = 0;
  UNUSED = 1;  // _DEFAULT, but should never be seen in logs.
  VERBOSE = 2;
  DEBUG = 3;
  INFO = 4;
  WARN = 5;
  ERROR = 6;
  FATAL = 7;
}
