/*
 * Copyright (C) 2018 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";
option optimize_for = LITE_RUNTIME;
package perfetto.protos;
import "perfetto/common/android_logcat_constants.proto";

message AndroidLogcatConfig {
  repeated AndroidLogcatLogId log_ids = 1;

  // How frequently the logr socket should be polled. We avoid using poll()
  // to avoid waking up perfetto daemons too frequently and interfering with
  // system activity too much.
  optional uint32 poll_ms = 2;

  // If set ignores all log messages which prio is < the given value.
  optional AndroidLogcatPriority min_prio = 3;

  // If non-empty ignores all log messages which tag doesn't match one of the
  // specified values.
  repeated string filter_tags = 4;
}
